--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/qrcode": "^1.5.6",
     "diff": "^8.0.3",
     "js-md5": "^0.8.3",
+    "path-browserify": "^1.0.1",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -34,6 +35,7 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.10.1",
+    "@types/path-browserify": "^1.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
